--- a/about-me.html
+++ b/about-me.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/styles/about-me.css">
-    <link rel="stylesheet" href="/styles/home.css">
-    <link rel="stylesheet" href="/styles/transitions.css">
+    <link rel="stylesheet" href="../styles/about-me.css">
+    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/transitions.css">
     <title>Contact - Michael Suggs</title>
 </head>
 
@@ -20,7 +20,7 @@
         <div id="overlay">
             <section class="content">
                 <div class="img-container">
-                    <img src="/images/test-human.jpg" alt="">
+                    <img src="../images/test-human.jpg" alt="">
                 </div>
                 <div class="about-me-container">
                     <h3>About Me</h3>
