--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             </header>
 
             <div class="overlay"></div>
-            <video src="/images/Pexels Videos 2715412.mp4" autoplay muted loop></video>
+            <video src="/images/home-background.mp4" autoplay muted loop></video>
             <div class="text">
                 <h2>Nelcome</h2>
                 <h3>to my journey</h3>
