--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../styles/home.css">
-    <link rel="stylesheet" href="../styles/transitions.css">
+    <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="/styles/transitions.css">
     <style>body{cursor:none;}</style>
     <title>Michael Suggs</title>
 </head>
@@ -24,7 +24,7 @@
             </header>
 
             <div class="overlay"></div>
-            <video src="/images/home-background.mp4" autoplay muted loop></video>
+            <video src="./images/home-background.mp4" autoplay muted loop></video>
             <div class="text">
                 <h2>Nelcome</h2>
                 <h3>to my journey</h3>
