relative link paths

--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../styles/projects.css">
-    <link rel="stylesheet" href="../styles/transitions.css">
+    <link rel="stylesheet" href="./styles/projects.css">
+    <link rel="stylesheet" href="./styles/transitions.css">
     <title>Document</title>
 </head>
 
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="image-container">
-                    <img src="/images/logo.jpg" alt="Avatar" class="project-image">
+                    <img src="./images/logo.jpg" alt="Avatar" class="project-image">
                     <a target="_blank" href="https://sport-discuss.herokuapp.com/login">
                         <div class="project-overlay">
                             <div class="project-text">Visit Site Here</div>
@@ -58,7 +58,7 @@
         <div id="project2" class="box-even">
             <div class="project-even">
                 <div class="image-container">
-                    <img src="/images/movie-finder.png" alt="Avatar" class="project-image">
+                    <img src="./images/movie-finder.png" alt="Avatar" class="project-image">
                     <a target="_blank" href="https://masuggs515.github.io/movie_finder/movie.html">
                         <div class="project-overlay">
                             <div class="project-text">Visit Site Here</div>
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="image-container">
-                    <img src="/images/pizzeria.png" alt="Avatar" class="project-image">
+                    <img src="./images/pizzeria.png" alt="Avatar" class="project-image">
                     <a target="_blank" href="https://masuggs515.github.io/pizzeria-mock/index.html">
                         <div class="project-overlay">
                             <div class="project-text">Visit Site Here</div>
@@ -109,7 +109,7 @@
         <div id="project4" class="box-even">
             <div class="project-even">
                 <div class="image-container">
-                    <img src="/images/connect-four.png" alt="Avatar" class="project-image">
+                    <img src="./images/connect-four.png" alt="Avatar" class="project-image">
                     <a target="_blank" href="https://masuggs515.github.io/Connect_Four/">
                         <div class="project-overlay">
                             <div class="project-text">Visit Site Here</div>
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="image-container">
-                    <img src="/images/gif-generator.png" alt="Avatar" class="project-image">
+                    <img src="./images/gif-generator.png" alt="Avatar" class="project-image">
                     <a target="_blank" href="https://masuggs515.github.io/Giphy_Party/">
                         <div class="project-overlay">
                             <div class="project-text">Visit Site Here</div>
@@ -168,7 +168,7 @@
     </ul>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="../app.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
