--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,14 @@
 <body>
     <div class="transition swipe"></div>
     <div class="tran-load swipe-load active2"></div>
+    <!-- backgrounds -->
+    <div class="bg-1"></div>
+    <div class="bg-2"></div>
+    <div class="bg-3"></div>
+    <div class="bg-4"></div>
+    <div class="bg-5"></div>
+    <div class="bg-6"></div>
+    <!-- Main -->
     <div id="main">
         <header>
             <h2 class="logo"><a class="transition-a" href="home.html">Michael Suggs</a></h2>
@@ -33,9 +41,11 @@
             <div class="project-odd">
                 <div class="project-desc">
                     <h1>SportDiscuss</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, dolorem ex. Quia earum officia
-                        libero cumque sint eligendi corrupti exercitationem, doloremque pariatur dolorem veniam eaque
-                        aperiam amet, fugiat quas numquam?</p>
+                    <p>A website where fans of sports betting can leave comments on their favorite game to share their
+                        knowledge or see other people's
+                        views to obtain knowledge. Front end using HTML, CSS, and JQuery. Back end using Python with
+                        Jinja, SQLAlchemy, and WTForms. Database is PostgreSQL. Information retrieved with <a
+                            href="https://the-odds-api.com/">The Odds API</a>.</p>
                     <div>
                         <a target="_blank" href="https://github.com/masuggs515/Sports_Betting_Forum"><i
                                 class="fab fa-github"></i> Code
@@ -67,9 +77,9 @@
                 </div>
                 <div class="project-desc">
                     <h1>NextFlick</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, dolorem ex. Quia earum officia
-                        libero cumque sint eligendi corrupti exercitationem, doloremque pariatur dolorem veniam eaque
-                        aperiam amet, fugiat quas numquam?</p>
+                    <p>NextFlick allows you to search any movie and most TV shows to find trailers for searched movie.
+                        Front-end website built with HTML, CSS, and JQuery. Movie data retrieved through the <a
+                            href="https://www.themoviedb.org/documentation/api">TMDB</a> API.</p>
                     <div>
                         <a target="_blank" href="https://github.com/masuggs515/movie_finder"><i
                                 class="fab fa-github"></i> Code
@@ -84,9 +94,9 @@
             <div class="project-odd">
                 <div class="project-desc">
                     <h1>Michael's Pizzeria</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, dolorem ex. Quia earum officia
-                        libero cumque sint eligendi corrupti exercitationem, doloremque pariatur dolorem veniam eaque
-                        aperiam amet, fugiat quas numquam?</p>
+                    <p>Mock restaurant page with interactive menu. Collapseable navigation with image carousel for
+                        different sections of the site. Map embedded with Google Maps. Front end only with HTML, CSS,
+                        and Javascript. Images from unsplash.</p>
                     <div>
                         <a target="_blank" href="https://github.com/masuggs515/pizzeria-mock"><i
                                 class="fab fa-github"></i> Code
@@ -118,9 +128,8 @@
                 </div>
                 <div class="project-desc">
                     <h1>Connect Four</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, dolorem ex. Quia earum officia
-                        libero cumque sint eligendi corrupti exercitationem, doloremque pariatur dolorem veniam eaque
-                        aperiam amet, fugiat quas numquam?</p>
+                    <p>Connect Four game built with HTML, CSS, and JQuery. Coin flip to decide who goes first and
+                        options for small, medium, or large board. Classic game with multiple options for variety.</p>
                     <div>
                         <a target="_blank" href="https://github.com/masuggs515/Connect_Four"><i
                                 class="fab fa-github"></i> Code
@@ -135,9 +144,9 @@
             <div class="project-odd">
                 <div class="project-desc">
                     <h1>Gif Generator</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, dolorem ex. Quia earum officia
-                        libero cumque sint eligendi corrupti exercitationem, doloremque pariatur dolorem veniam eaque
-                        aperiam amet, fugiat quas numquam?</p>
+                    <p>Search topic that you desire and a gif will be populated. Layout with Bootstrapv5. Site built
+                        with HTML, CSS, and JQuery. API used for gif's is the <a href="https://api.giphy.com/">GIPHY</a>
+                        API.</p>
                     <div>
                         <a target="_blank" href="https://github.com/masuggs515/Giphy_Party"><i
                                 class="fab fa-github"></i> Code
@@ -155,7 +164,7 @@
                     </a>
                 </div>
             </div>
-        </div>        
+        </div>
     </div>
 
     <ul class="menu">
