about-me and project styling

--- a/home.html
+++ b/home.html
@@ -39,9 +39,9 @@
             <a class="transition-a" href="projects.html">Projects</a>
         </div>
         <ul class="contact">
-            <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
-            <li><a href=""><i class="fab fa-github"></i></a></li>
-            <li><a href=""><i class="far fa-envelope"></i></a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/michael-suggs-developer/"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a target="_blank" href="https://github.com/masuggs515"><i class="fab fa-github"></i></a></li>
+            <li><a href="mailto:msuggs.coding@gmail.com"><i class="far fa-envelope"></i></a></li>
         </ul>
     </section>
 
@@ -49,9 +49,9 @@
         <h4>Menu</h4>
         <hr>
         <li><a class="transition-a" href="home.html">Home</a> </li>
-        <li><a class="transition-a" href="#">Resume</a> </li>
+        <li><a class="transition-a" href="resume.html">Résumé</a> </li>
         <li><a class="transition-a" href="projects.html">Projects</a> </li>
-        <li><a class="transition-a" href="about-me.html">About Me</a> </li>
+        <li><a class="transition-a" href="about-me.html">About Me</a></li>
     </ul>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
