--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./styles/about-me.css">
+    <link rel="stylesheet" href="./styles/resume.css">
     <link rel="stylesheet" href="./styles/transitions.css">
     <title>Document</title>
 </head>
@@ -22,24 +22,17 @@
             <div>
                 <a class="transition-a" href="home.html">Home</a>
                 <a class="transition-a" href="projects.html">Projects</a>
-                <a class="transition-a" href="resume.html">Résumé</a>
-                <a class="transition-a current" href="about-me.html">About Me</a>
+                <a class="transition-a current" href="resume.html">Résumé</a>
+                <a class="transition-a" href="about-me.html">About Me</a>
+
             </div>
             <div class="toggle"></div>
 
         </header>
-        <div id="about-main">
-            <div id="about-desc">
-                <h2>Michael Suggs</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga ab officia dignissimos eos, totam
-                    cupiditate laudantium asperiores in suscipit ex optio voluptate assumenda nulla voluptatem
-                    repudiandae
-                    exercitationem veritatis tenetur nisi?</p>
-            </div>
-            <div class="img-container">
-                <img src="/images/profile-picture.jpg" alt="">
-            </div>
+        <div class="resume-container">
+            <iframe id="resume" src="https://resume.creddle.io/embed/20qx3kg8m1i" seamless></iframe>
         </div>
+
         <ul class="menu">
             <h4>Menu</h4>
             <hr>
@@ -47,7 +40,6 @@
             <li><a class="transition-a" href="resume.html">Résumé</a> </li>
             <li><a class="transition-a" href="projects.html">Projects</a> </li>
             <li><a class="transition-a" href="about-me.html">About Me</a></li>
-            <li></li>
         </ul>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
