--- a/about-me.html
+++ b/about-me.html
@@ -9,7 +9,7 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/about-me.css">
     <link rel="stylesheet" href="./styles/transitions.css">
-    <title>Document</title>
+    <title>About-Me</title>
 </head>
 
 <body>
