--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/resume.css">
     <link rel="stylesheet" href="./styles/transitions.css">
-    <title>Document</title>
+    <title>My Résumé</title>
 </head>
 
 <body>
