--- a/about-me.html
+++ b/about-me.html
@@ -40,7 +40,7 @@
                     full-stack course and am excited to make this new found love my career.</p>
             </div>
             <div class="img-container">
-                <img src="/images/profile-picture.jpg" alt="">
+                <img src="./images/profile-picture.jpg" alt="">
             </div>
         </div>
         <ul class="menu">
