--- a/about-me.html
+++ b/about-me.html
@@ -33,11 +33,11 @@
                 <h2>Michael Suggs</h2>
                 <p>Welcome to my life. I am a proud father to a 4-month old little boy who has stolen my heart. When
                     hearing about his arrival to our world, I decided that I needed to live the life I would want him to
-                    live. With that motivation and the unfortunately fortunate circumstances of being laid off of work
+                    live. With that motivation and the unfortunately fortunate circumstance of being laid off of work
                     due to COVID-19, I went on a search to find what brings me joy. I stumbled across a free coding camp
-                    and the rest is history. For the past year I have known that coding is my passion and have enjoyed
-                    the process of learning and creating new things. I am now in Springboard Software Engineering
-                    full-stack course and am excited to make this new found love my career.</p>
+                    and the rest is history. For the past year, I have known that coding is my passion and have enjoyed
+                    the process of learning and creating new things. I am now taking the Springboard Software Engineering
+                    full-stack course and am excited to make this newfound love my career.</p>
             </div>
             <div class="img-container">
                 <img src="./images/profile-picture.jpg" alt="">
